Day 5, CSS style and remove styles from HTML file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="style.css" />
   <head>
     <meta charset="UTF-8" />
     <title>Hopeful Cleaning LLC</title>
@@ -8,24 +9,24 @@
     <h1>Need Help Cleaning your Home?</h1>
     <h2>We are here for you</h2>
     <p>From regular cleaning to deep cleaning, window cleaning, or carpet cleaning, <br>Hopeful is the one stop shop for all your cleaning needs.</p>
-    <p style="color: green;">Let Us help you with your next Cleaning Adventure!</p>
+    <p>Let Us help you with your next Cleaning Adventure!</p>
     <a href="https://instagram.com/hopefulcleaning">Visit us in instagram</a>
     <br />
 
-    <h2 style="color: aquamarine;">Our Services</h2>
+    <h2>Our Services</h2>
     <ul>
       <li>Regular Cleaning</li>
       <li>Deep Cleaning</li>
       <li>Move in/out Cleaning</li>
       <li>Small Business Cleaning</li>
     </ul>
-    <h2 style="color: aquamarine;">How we do it?</h2>
+    <h2>How we do it?</h2>
     <ol>
       <li>You book your cleaning in our system</li>
       <li>Our Hopeful Team visit your home in the time and date you choose</li>
       <li>Your home is so clean that you scream</li>
     </ol>
-    <h2 style="color: chartreuse;"> MY PLACE JUST GOT HOPE</h2>
+    <h2> MY PLACE JUST GOT HOPE</h2>
     <nav>
       <a href="https://facebook.com/hopefulcleaning">Visit us in facebook</a>
       <a href="https://hopefulcleaning.com">Book Us!</a>
@@ -47,7 +48,7 @@
     </form>
 
     <img src="https://static.wixstatic.com/media/f7b791_783b02014a7847e4a050f4361c5aedd8~mv2.png" width="300" height="300" alt="Hopeful Cleaning Logo" />
-    <h2 style="color: darkgreen;">Meet the Team</h2>
+    <h2>Meet the Team</h2>
     <img src="https://static.wixstatic.com/media/ac3887_99586a88a3394b68a92685cf5d30c1a5~mv2.jpg" width="650" height="400" alt="Hopeful Team" />
   </body>
 </html>
